--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,12 +8,10 @@
     tools:context="com.alkutkar.doordash.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
-        <ListView
-            android:id="@+id/list"
+        <FrameLayout
+            android:id="@+id/fragment_placeholder"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
+            android:layout_height="match_parent">
+        </FrameLayout>
 
 </RelativeLayout>
